# near-crowdfunding

./: Cargo.toml  README.md  deploy.sh  lib2.rs  package-lock.json  start.sh  test.sh
src/: lib.rs
