[package]
name = "hello_near"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
uint = { version = "0.9.3", default-features = false }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
getrandom = { version = "0.2", features = ["js"] }
nanoid = "0.4.0"
test-log = "0.2.14"

[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = ["sandbox-rs"]